--- a/Cnote/app/src/main/AndroidManifest.xml
+++ b/Cnote/app/src/main/AndroidManifest.xml
@@ -10,15 +10,16 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
     <uses-feature android:name="android.hardware.camera" />
 
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:hardwareAccelerated="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <receiver
@@ -26,7 +27,7 @@
             android:enabled="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
-                <action android:name="android.intent.action.EXTERNAL_APPLICATIONS_AVAILABLE"></action>
+                <action android:name="android.intent.action.EXTERNAL_APPLICATIONS_AVAILABLE" />
             </intent-filter>
         </receiver>
 
@@ -45,7 +46,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".BarcodeCaptureActivity"></activity>
+        <activity android:name=".BarcodeCaptureActivity" />
         <activity
             android:name=".CNNoteExtDetailsActivity"
             android:configChanges="orientation|screenSize|keyboardHidden" />
@@ -72,14 +73,23 @@
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="Signature Confirmation"
             android:theme="@android:style/Theme.Holo.Light.Dialog" />
-        <activity android:name=".ManifestGenActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden"/>
-        <activity android:name=".ManifestConfActivity" android:configChanges="orientation|screenSize|keyboardHidden"/>
+        <activity
+            android:name=".ManifestGenActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".ManifestConfActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden" />
         <activity
             android:name=".BTSettingsActivity"
             android:label="@string/title_activity_btsettings" />
         <activity android:name=".MasterSyncActivity" />
         <activity android:name=".SearchCNNoteActivity" />
+        <activity android:name=".CnnotePaymentSearch" />
+        <activity android:name=".CnnotePayment" />
+        <activity android:name=".CNNoteKrishnaSerach" />
+        <activity android:name=".CNNoteKrishna" />
+        <activity android:name=".UploadLogoToPrinter"></activity>
     </application>
 
 </manifest>
